update address for order

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Food Town</title>
     <!-- <script src="https://cdn.ckbox.io/CKBox/1.1.0/ckbox.js"></script> -->
   </head>
   <body>
